syntax = "proto3";

package library;
option go_package = "librarypb";

import "google/protobuf/empty.proto";

// gRPC service definition
service LibraryServices {
    rpc CreateBook(CreateBookRequest) returns (Book) {}
    rpc GetBook(GetBookRequest) returns (Book) {}
    rpc UpdateBook(UpdateBookRequest) returns (Book) {}
    rpc DeleteBook(DeleteBookRequest) returns (google.protobuf.Empty) {}
    rpc ListBooks(ListBookRequest) returns (ListBookResponse) {}
}

// Define the Book message
message Book {
    int64 id = 1;
    string title = 2;
    string author = 3;
    string isbn = 4;
    int32 publishedYear = 5;
    string summary = 6;
}

// Request messages
message CreateBookRequest {
    int64 id = 1;
    string title = 2;
    string author = 3;
    string isbn = 4;
    int32 publishedYear = 5;
    string summary = 6;
}

message GetBookRequest {
    int64 id = 1;
}

message UpdateBookRequest {
    int64 id = 1;
    string title = 2;
    string author = 3;
    string isbn = 4;
    int32 publishedYear = 5;
    string summary = 6;
}

message DeleteBookRequest {
    int64 id = 1;
}

// Pagination and list response
message ListBookRequest {
    int32 page = 1;
    int32 pageSize = 2;
}

message ListBookResponse {
    repeated Book books = 1;
    int32 total = 2;
}
